--- a/nosotros.html
+++ b/nosotros.html
@@ -17,6 +17,11 @@
             <li><a href="servicios.html">Servicios</a></li>
             <li><a href="contacto.html">Contacto</a></li>
           </ul>
+          <main>
+            <div class="saludos">
+<p>Bienvenidos</p>
+            </div>
+          </main>
         </nav>
         <button class="button-menu-toggle">Menu</button>
       </div>
