--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 </main>
 <footer class="piedepagina">
     <p>
-        que onda perreque
+        Aca falta mas info
     </p>
 </footer>
 <div class="botones">
