--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 <body>
     <header class="container-nav">
         <nav class="navbar" role="navigation">
-          <a href="mi-primer-website.html" class="brand">Mi página web</a>
+            <a href="index.html" class="brand">Thia</a>
           <ul class="nav-links">
-            <li><a href="mi-primer-website.html">Inicio</a></li>
-            <li><a href="nosotros.html">Nosotros</a></li>
-            <li><a href="servicios.html">Servicios</a></li>
+            <li><a href="index.html">Inicio</a></li>
+            <li><a href="nosotros.html">Clanes</a></li>
+            <li><a href="misiones.html">Misiones</a></li>
             <li><a href="contacto.html">Contacto</a></li>
           </ul>
         </nav>
@@ -30,7 +30,7 @@
           <p>Soy [Tu nombre], ¡y esta es mi primera página web!</p>
           <p>Estoy aprendiendo desarrollo web para crear sitios web visualmente atrapantes y funcionales.</p>
         </section>
-        <section>
+        <section id="section2">
           <h2>Lo que se viene...</h2>
           <p>
             A lo largo de este curso, estaré aprendiendo HTML, CSS y JavaScript. Estos lenguajes me ayudarán a crear una base sólida en el desarrollo web front-end.
@@ -47,7 +47,7 @@
     </p>
 </footer>
 <div class="botones">
-    <button onClick="showAlert()" aria-label="Haz clic en mí">¡Haz clic en mí!</button>
+    <button  onClick="showAlert()" aria-label="Haz clic en mí">¡Haz clic en mí!</button>
 <button id=miBoton>Clickeame</button>
 </div>
 <script src="script.js"></script>
