--- a/contacto.html
+++ b/contacto.html
@@ -10,12 +10,12 @@
 <body>
     <div class="container-nav">
         <nav class="navbar" role="navigation">
-          <a href="mi-primer-website.html" class="brand">Mi página web</a>
+          <a href="index.html" class="brand">Thia</a>
           <ul class="nav-links">
-            <li><a href="mi-primer-website.html">Inicio</a></li>
-            <li><a href="nosotros.html">Nosotros</a></li>
-            <li><a href="servicios.html">Servicios</a></li>
-            <li><a href="contacto.html">Contacto</a></li>
+            <li><a href="index.html">Inicio</a></li>
+            <li><a href="nosotros.html">Clanes</a></li>
+            <li><a href="misiones.html">Misiones</a></li>
+            <li><a href="contacto.html">Registro</a></li>
           </ul>
         </nav>
         <button class="button-menu-toggle">Menu</button>
